[package]
name = "grothan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = { version = "^0.3.0" }
rand = { version = "0.8.5" }
ark-std = { version = "^0.3.0" }
ark-ec = { version = "^0.3.0" }
ark-snark = { version = "^0.3.0" }
ark-r1cs-std = { version = "^0.3.0" }
ark-nonnative-field = { version = "0.3.0"}
ark-relations = { version = "^0.3.0" }
ark-bls12-377 = { version = "^0.3.0", features = ["r1cs","curve"] }
ark-bls12-381 = { version = "^0.3.0", features = ["curve"] }
ark-bw6-761 = { version = "^0.3.0" }
ark-groth16 = { version = "^0.3.0", features = ["r1cs"] }
ark-sponge = { version = "^0.3.0" }
ark-serialize = { version = "^0.3.0" }
json = "0.12.4"
lazy_static = "^1.4.0"
eyre = "0.6.8"






